--- a/fly.toml
+++ b/fly.toml
@@ -14,17 +14,18 @@ swap_size_mb = 512
 release_command = "/app/bin/migrate"
 
 [env]
-# DATABASE_PATH = "/var/lib/litefs/liveview_counter_prod.db"
-DATABASE_PATH = "/data/mydata/liveview_counter_prod.db"
+DATABASE_PATH = "liveview_counter_prod.db"
+# DATABASE_PATH = "/data/mydata/liveview_counter_prod.db"
 DNS_CLUSTER_QUERY = "distributed-counters.internal"
 PHX_HOST = "distributed-counters.fly.dev"
 PORT = "8080"
+RELEASE_COOKIE = "4vB0A5bYymxG_f4P-EOLFRJ7CTpH7GkLsXFwDHRcHSRFLFFxcGh1mg=="
 
 [mounts]
-# source = "litefs"
-# destination = "/var/lib/litefs"
-source = "mydata"
-destination = "/data"
+source = "litefs"
+destination = "/var/lib/litefs"
+# source = "mydata"
+# destination = "/data"
 
 
 [http_service]
