--- a/litefs.yml
+++ b/litefs.yml
@@ -21,8 +21,8 @@ exit-on-error: false
 # for applications that use a single SQLite database.
 proxy:
   addr: ":8080"
-  target: "distributed-counters:8080"
-  db: "db"
+  target: "distributed-counters:4000"
+  db: "liveview_counter_prod.db"
   passthrough: 
     - "*.ico"
     - "*.png"
