tests: removed release command migrate

--- a/litefs.yml
+++ b/litefs.yml
@@ -26,13 +26,14 @@ proxy:
   passthrough: 
     - "*.ico"
     - "*.png"
+   
 
 # This section defines a list of commands to run after LiteFS has connected
 # and sync'd with the cluster. You can run multiple commands but LiteFS expects
 # the last command to be long-running (e.g. an application server). When the
 # last command exits, LiteFS is shut down.
-exec:
-  - cmd: "/app/bin/server -addr :4000 -dsn /litefs/db"
+# exec:
+  # - cmd: "/app/bin/server -addr :4000 -dsn /litefs/db"
 
 # The lease section specifies how the cluster will be managed. We're using the
 # "consul" lease type so that our application can dynamically change the primary.
