--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for distributed-counters on 2023-10-29T18:44:19+01:00
+# fly.toml app configuration file generated for distributed-counters on 2023-10-29T19:30:55+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -11,7 +11,7 @@ swap_size_mb = 512
 [build]
 
 [deploy]
-release_command = "/app/bin/migrate"
+# release_command = "/app/bin/migrate"
 
 [env]
 DATABASE_PATH = "/liveview_counter_prod.db"
@@ -19,8 +19,9 @@ DNS_CLUSTER_QUERY = "distributed-counters.internal"
 PHX_HOST = "distributed-counters.fly.dev"
 PORT = "8080"
 RELEASE_COOKIE = "4vB0A5bYymxG_f4P-EOLFRJ7CTpH7GkLsXFwDHRcHSRFLFFxcGh1mg=="
+PRIMARY_REGION = "cdg"
 
-[mounts]
+[[mounts]]
 source = "litefs"
 destination = "/var/lib/litefs"
 
