--- a/fly.toml
+++ b/fly.toml
@@ -15,7 +15,7 @@ swap_size_mb = 512
 
 [env]
 DATABASE_PATH = "/liveview_counter_prod.db"
-DNS_CLUSTER_QUERY = "distributed-counters.internal"
+DNS_CLUSTER_QUERY = "liveview-counter.internal"
 PHX_HOST = "distributed-counters.fly.dev"
 PORT = "8080"
 RELEASE_COOKIE = "4vB0A5bYymxG_f4P-EOLFRJ7CTpH7GkLsXFwDHRcHSRFLFFxcGh1mg=="
