--- a/fly.toml
+++ b/fly.toml
@@ -10,11 +10,11 @@ swap_size_mb = 512
 
 [build]
 
-[deploy]
-release_command = "/app/bin/migrate"
+# [deploy]
+# release_command = "/app/bin/migrate"
 
 [env]
-DATABASE_PATH = "/mydata/litefs/liveview_counter_prod.db"
+DATABASE_PATH = "/data/mydata/liveview_counter_prod.db"
 DNS_CLUSTER_QUERY = "liveview-counter.internal"
 PHX_HOST = "distributed-counters.fly.dev"
 PORT = "8080"
@@ -22,8 +22,10 @@ RELEASE_COOKIE = "4vB0A5bYymxG_f4P-EOLFRJ7CTpH7GkLsXFwDHRcHSRFLFFxcGh1mg=="
 PRIMARY_REGION = "cdg"
 
 [mounts]
-source = "litefs"
-destination = "/mydata/litefs"
+# source ="litefs"
+# destination= ???
+source = "mydata"
+destination = "/data"
 
 [http_service]
 internal_port = 8080
