--- a/litefs.yml
+++ b/litefs.yml
@@ -3,13 +3,13 @@
 # storage on disk. It intercepts disk writes to determine transaction boundaries
 # so that those transactions can be saved and shipped to replicas.
 fuse:
-  dir: "/litefs"
+  dir: "/data"
 
 # The data section describes settings for the internal LiteFS storage. We'll 
 # mount a volume to the data directory so it can be persisted across restarts.
 # However, this data should not be accessed directly by the user application.
 data:
-  dir: "/var/lib/litefs"
+  dir: "/data/mydata"
 
 # This flag ensure that LiteFS continues to run if there is an issue on starup.
 # It makes it easy to ssh in and debug any issues you might be having rather
@@ -33,7 +33,7 @@ proxy:
 # the last command to be long-running (e.g. an application server). When the
 # last command exits, LiteFS is shut down.
 exec:
-  - cmd: "/app/bin/server -addr :8081 -dsn /litefs/db"
+  - cmd: "/app/bin/server -addr :8081 -dsn /mydata/db"
 
 # The lease section specifies how the cluster will be managed. We're using the
 # "consul" lease type so that our application can dynamically change the primary.
