--- a/litefs.yml
+++ b/litefs.yml
@@ -33,7 +33,7 @@ proxy:
 # the last command to be long-running (e.g. an application server). When the
 # last command exits, LiteFS is shut down.
 exec:
-  - cmd: "/app/bin/server -addr :8081 -dsn /mydata/db"
+  - cmd: "/app/bin/server -addr :8081 -dsn /data/db"
 
 # The lease section specifies how the cluster will be managed. We're using the
 # "consul" lease type so that our application can dynamically change the primary.
