--- a/fly.toml
+++ b/fly.toml
@@ -26,7 +26,7 @@ source = "mydata"
 destination = "/data"
 
 [http_service]
-internal_port = "8080"
+internal_port = 8080
 force_https = true
 auto_stop_machines = true
 auto_start_machines = true
