--- a/litefs.yml
+++ b/litefs.yml
@@ -17,7 +17,7 @@ data:
 # This flag ensure that LiteFS continues to run if there is an issue on starup.
 # It makes it easy to ssh in and debug any issues you might be having rather
 # than continually restarting on initialization failure.
-exit-on-error: false
+exit-on-error: true
 
 # This section defines settings for the option HTTP proxy.
 # This proxy can handle primary forwarding & replica consistency
