--- a/fly.toml
+++ b/fly.toml
@@ -15,7 +15,7 @@ swap_size_mb = 512
 
 [env]
 DATABASE_PATH = "/data/mydata/liveview_counter_prod.db"
-DNS_CLUSTER_QUERY = "liveview-counter.internal"
+DNS_CLUSTER_QUERY = "distributed-counters.internal"
 PHX_HOST = "distributed-counters.fly.dev"
 PORT = "8080"
 # PRIMARY_REGION = "cdg"
