--- a/litefs.yml
+++ b/litefs.yml
@@ -5,7 +5,7 @@
 fuse:
   # This is the mount directory that applications will
   # use to access their SQLite databases.
-  dir: "mydata"
+  dir: "/app/data/mydata"
 
 # The data section describes settings for the internal LiteFS storage. We'll 
 # mount a volume to the data directory so it can be persisted across restarts.
@@ -25,7 +25,6 @@ exit-on-error: true
 proxy:
   # matches the internal_port in fly.toml
   addr: ":8080"
-  # from Dockerfile???
   target: "localhost:8081"
   #  SQLite database filename
   db: "liveview_counter_prod.db"
