--- a/fly.toml
+++ b/fly.toml
@@ -18,6 +18,7 @@ DATABASE_PATH = "/data/mydata/liveview_counter_prod.db"
 DNS_CLUSTER_QUERY = "liveview-counter.internal"
 PHX_HOST = "distributed-counters.fly.dev"
 PORT = "4000"
+INTERNAL_PORT = "8080"
 RELEASE_COOKIE = "4vB0A5bYymxG_f4P-EOLFRJ7CTpH7GkLsXFwDHRcHSRFLFFxcGh1mg=="
 
 [mounts]
