--- a/fly.toml
+++ b/fly.toml
@@ -21,7 +21,7 @@ PORT = "8080"
 
 [mounts]
 source = "mydata"
-destination = "/data"
+destination = "/data/mydata"
 
 [http_service]
 internal_port = 8080
