--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for distributed-counters on 2023-10-30T18:16:39+01:00
+# fly.toml app configuration file generated for distributed-counters on 2023-10-30T22:03:38+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -10,14 +10,13 @@ swap_size_mb = 512
 
 [build]
 
-# [deploy]
-#   release_command = "/app/bin/migrate"
 
 [env]
 DATABASE_PATH = "/data/myapp/liveview_couner_prod.db"
 DNS_CLUSTER_QUERY = "distributed-counters.internal"
 PHX_HOST = "distributed-counters.fly.dev"
 PORT = "8080"
+PRIMARY_REGION = "cdg"
 
 [mounts]
 source = "mydata"
