--- a/litefs.yml
+++ b/litefs.yml
@@ -24,7 +24,7 @@ exit-on-error: false
 # This proxy can handle primary forwarding & replica consistency
 # for applications that use a single SQLite database.
 proxy:
-  # matches the internal_port in fly.toml
+  # Specifies the bind address of the proxy server.
   addr: ":8080"
   # Phoenix is listening on port 4000, set in fly.toml under PORT
   target: "localhost:4000"
@@ -40,7 +40,8 @@ proxy:
 # the last command to be long-running (e.g. an application server). When the
 # last command exits, LiteFS is shut down.
 exec:
-  - cmd: "/app/bin/server  -addr :4000 -dsn /data/mydata"
+  - cmd: "/app/bin/server"  
+  # -addr :4000 -dsn /data/mydata"
 
 # The lease section specifies how the cluster will be managed. We're using the
 # "consul" lease type so that our application can dynamically change the primary.
