--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for distributed-counters on 2023-10-31T08:56:28+01:00
+# fly.toml app configuration file generated for distributed-counters on 2023-10-31T09:54:59+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -10,9 +10,10 @@ swap_size_mb = 512
 
 [build]
 
+# [deploy]
+#   release_command = "/app/bin/migrate"
 
 [env]
-# DATABASE_PATH = "/data/myapp/liveview_counter_prod.db"
 DATABASE_PATH = "/mnt/mydata/liveview_counter_prod.db"
 DNS_CLUSTER_QUERY = "distributed-counters.internal"
 PHX_HOST = "distributed-counters.fly.dev"
@@ -20,14 +21,12 @@ PORT = "8080"
 PRIMARY_REGION = "cdg"
 
 [mounts]
-# source = "mydata"
-# destination = "/data/mydata"
 source = "mydata"
 destination = "/mnt"
 processes = ["app"]
 
 [http_service]
-internal_port = 8080
+internal_port = 8081
 force_https = true
 auto_stop_machines = true
 auto_start_machines = true
