--- a/fly.toml
+++ b/fly.toml
@@ -17,7 +17,7 @@ swap_size_mb = 512
 DATABASE_PATH = "/mnt/mydata/liveview_counter_prod.db"
 DNS_CLUSTER_QUERY = "distributed-counters.internal"
 PHX_HOST = "distributed-counters.fly.dev"
-PORT = "4000"
+# PORT = "8080"
 PRIMARY_REGION = "cdg"
 
 [mounts]
