--- a/fly.toml
+++ b/fly.toml
@@ -21,8 +21,8 @@ PORT = "8080"
 PRIMARY_REGION = "cdg"
 
 [mounts]
-source = "mydata"
-destination = "/mnt/mydata"
+source = "litefs"
+destination = "/mnt/litefs"
 processes = ["app"]
 
 [http_service]
