--- a/litefs.yml
+++ b/litefs.yml
@@ -17,7 +17,7 @@ data:
   # path to internal data storage, placed on a persistent volume => fly volumes create litefs
   # dir: "/data/litefs"
   # dir: "/mnt/litefs"
-  dir: "/data/litefs"
+  dir: "/var/lib/litefs"
 
 # This flag ensure that LiteFS continues to run if there is an issue on starup.
 # It makes it easy to ssh in and debug any issues you might be having rather
