--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for distributed-counters on 2023-10-31T22:37:15+01:00
+# fly.toml app configuration file generated for distributed-counters on 2023-11-01T09:44:52+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -10,6 +10,8 @@ swap_size_mb = 512
 
 [build]
 
+# [deploy]
+#   release_command = "/app/bin/migrate"
 
 [env]
 DATABASE_PATH = "/data/litefs/counters.db"
