--- a/fly.toml
+++ b/fly.toml
@@ -18,7 +18,7 @@ DATABASE_PATH = "/data/litefs/counters.db"
 DNS_CLUSTER_QUERY = "distributed-counters.internal"
 PHX_HOST = "distributed-counters.fly.dev"
 PORT = "8080"
-PRIMARY_REGION = "cdg"
+PRIMARY_REGION = "${PRIMARY_REGION}"
 
 [mounts]
 source = "litefs"
